# ageofquadrones

./: Ammo.cpp  Ammo.h  Background.cpp  Background.h  CMakeLists.txt  Changelog.txt  Dronedemort.cpp  Dronedemort.h  MamaQuad.cpp  MamaQuad.h  NeoQuad.cpp  NeoQuad.h  NeoQuadrotor.kdev4  QuadTimer.cpp  QuadTimer.h  Quadrotor.cpp  Quadrotor.h  README.md  Settings.h  Timeline.cpp  Timeline.h  Timeline.txt  camera.cpp  camera.h  groups  main.cpp  makefile  project.config
.kdev4/: NeoQuadrotor.kdev4
Data/: CMakeLists.txt  Timeline.txt  comm.ppm  download.ppm  eye.ppm  flame.ppm  floor.ppm  floor.txt  grass.ppm  grass.txt  image-1.ppm  image.ppm  images.ppm  laser_gun.ppm  mud.ppm  perf_white.ppm  red.ppm  security.ppm  sky.ppm  tower.ppm  world.txt
raygl/: raygldefs.h
